cluster/apps/monitoring/grafana-stack/tempo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-ingress
  namespace: monitoring
spec:
  rules:
    - host: "tempo.capricorn.brendonmccool.com"  # Your hostname
      http:
        paths:
        # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo  # The name of the service
                port:
                  number: 80  # Service Portnumber
